# memory_map_manager

./: .coveragerc  .flake8  .gitignore  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  README.md  code_gen.py  example_typedef.json  mem_map_schema.json  min_requirements.txt  mm_output_parser.py  mm_parser.py  pytest.ini  requirements.txt  setup.cfg  setup.py  td_parser.py  test_requirements.txt  tox.ini
.github/workflows/: ctest.yml  run.yml  tox.yml
examples/complex/: README.md  mp1.yaml  mp2.yaml  sa.yaml  sensor.yaml
examples/full/: README.md  main.yaml  map_simple_full.yaml
examples/minimal/: CMakeLists.txt  README.md  all_outputs.yaml  main.yaml  my_minimal_map.yaml
examples/philip/: README.md  adc.yaml  dac.yaml  gpio.yaml  i2c.yaml  main.yaml  map.yaml  pwm.yaml  read_philip.yaml  rtc.yaml  spi.yaml  sys.yaml  tmr.yaml  uart.yaml
memory_map_manager/: __init__.py  __main__.py  _version.py  code_gen.py  config_import_export.py  exporter.py  gen_helpers.py  importer.py  json_sem_hash.py  mm_output_parser.py  mm_parser.py  mmm_config_parser.py  resolver.py  td_output_parser.py  td_parser.py
memory_map_manager/data/: mm_gen_cfg.json  mm_map_cfg.json
memory_map_manager/templates/: header_end.h.j2  header_start.h.j2  mm_access.h.j2  mm_access_map.c.j2  mm_access_map.h.j2  mm_access_types.h.j2  mm_bitfields.h.j2  mm_cc.h.j2  mm_default_map.c.j2  mm_default_map.h.j2  (+7 more)
saved_setups/: bpt_typedef.json  philip_mem_map.json  philip_typedef.json
tests/: README.md  test_code_gen.py  test_example_typedef.py  test_export.py  test_importer.py  test_parser.py
(+37 files in other folders)
