[metadata]
name = memory_map_manager
description = C code generator that unifies interfaces for memory maps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riot-appstore/memory_map_manager
author = Kevin Weiss
author_email = kevin.weiss@haw-hamburg.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Environment :: Console
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
install_requires =
    jsonschema
    pyyaml
    jinja2>=3.0.0
python_requires = >=3.7

[options.package_data]
* = *.json, *.j2

[options.entry_points]
console_scripts =
    mmm-gen=memory_map_manager.__main__:main

[bdist_wheel]
universal = True
